# knowledge_graph

knowledge_graph/: CMakeLists.txt  package.xml  plugins.xml
knowledge_graph/3dsg/: 3DSceneGraph_Adairsville.npz  3DSceneGraph_Ancor.npz
knowledge_graph/config/: params.yaml
knowledge_graph/include/knowledge_graph/: knowledge_graph.hpp  knowledge_graph_class.hpp  knowledge_graph_server.hpp
knowledge_graph/include/knowledge_graph/plugins/: npy_3dsg_parser.hpp  pddl_parser.hpp
knowledge_graph/launch/: graph_server_launch.py
knowledge_graph/pddl/: domain.pddl
knowledge_graph/plugins/: npy_3dsg_parser.cpp  pddl_parser.cpp
knowledge_graph/src/: knowledge_graph.cpp  knowledge_graph_class.cpp  plugin_loader.cpp
knowledge_graph/src/knowledge_graph_server/: knowledge_graph_server.cpp  main.cpp
knowledge_graph/test/: CMakeLists.txt  knowledge_graph_test.cpp
knowledge_graph/test/integration/: knowledge_graph_server_test.cpp
knowledge_graph/test/unit/: knowledge_graph_test.cpp
knowledge_graph_interfaces/: CMakeLists.txt  package.xml
knowledge_graph_interfaces/msg/: Building.msg  Content.msg  Edge.msg  Graph.msg  Node.msg  Object.msg  Room.msg  SceneGraph.msg
knowledge_graph_interfaces/srv/: AddEdge.srv  AddNode.srv  GetEdges.srv  GetNodes.srv  UpdateGraph.srv
